--- a/roles/prereqs/mysql_fix_rhel8/defaults/main.yml
+++ b/roles/prereqs/mysql_fix_rhel8/defaults/main.yml
@@ -13,8 +13,8 @@
 # limitations under the License.
 
 ---
-mysql_connector_url: https://dev.mysql.com/get/Downloads/Connector-J/mysql-connector-java-5.1.48.zip
-mysql_connector_checksum: md5:5da24facd99964f296ecde32abcd2384
+mysql_connector_url: https://cdn.mysql.com/archives/mysql-connector-java-5.1/mysql-connector-java-5.1.47.zip
+mysql_connector_checksum: md5:c83017d13655f71e192389c70bb6bc93
 mysql_connector_download_dir: "{{ local_temp_dir }}"
 mysql_connector_extract_dir: "{{ local_temp_dir }}"
 mysql_connector_local_path: "{{ mysql_connector_extract_dir }}/mysql-connector-java-5.1.48/mysql-connector-java-5.1.48-bin.jar"
