--- a/roles/prereqs/python3/tasks/main.yml
+++ b/roles/prereqs/python3/tasks/main.yml
@@ -19,8 +19,8 @@
     file: "{{ ansible_os_family }}{{ ansible_distribution_major_version }}.yml"
 
 - set_fact:
-    install_python3_8: "true"
-  when: cloudera_cdh_version is version('7.1.8','>=')
+    install_python3_8: "false"
+#  when: cloudera_cdh_version is version('7.1.8','>=')
 
 - name: Install python 3
   package:
