--- a/roles/infrastructure/rdbms/vars/mysql.yml
+++ b/roles/infrastructure/rdbms/vars/mysql.yml
@@ -14,10 +14,11 @@
 
 ---
 mysql_daemon: mysqld
+mysql_packages: ['mysql-server']
 mysql_pid_file: /var/run/mysqld/mysqld.pid
 mysql_socket: /var/lib/mysql/mysql.sock
 mysql_datadir: /var/lib/mysql/data
-mysql_log_error: /var/log/mysqld.err
+mysql_log_error: /var/log/mysqld.log
 mysql_syslog_tag: mysqld
 mysql_user_home: /root
 mysql_user_name: root
