--- a/roles/infrastructure/rdbms/vars/mysql.yml
+++ b/roles/infrastructure/rdbms/vars/mysql.yml
@@ -14,7 +14,7 @@
 
 ---
 mysql_daemon: mysqld
-mysql_packages: ['mysql-server']
+mysql_packages: ['mysql-server', 'MySQL-python']
 mysql_pid_file: /var/run/mysqld/mysqld.pid
 mysql_socket: /var/lib/mysql/mysql.sock
 mysql_datadir: /var/lib/mysql/data
